fix: Set shellcheck to warning severity in CI
- Exclude info-level shellcheck messages (SC2162, SC2016, etc.)
- Only fail on warning and error severity issues
- Info-level issues are style preferences, not actual problems

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           echo "Running shellcheck on all shell scripts..."
           find . -type f -name "*.sh" -print0 | while IFS= read -r -d '' file; do
             echo "Checking: $file"
-            shellcheck "$file" || exit 1
+            shellcheck --severity=warning "$file" || exit 1
           done
           echo "✅ All shell scripts passed shellcheck"
 
