feat: Add AI frameworks installer, GPU detection, and checksum verification
- Create comprehensive AI frameworks installer script
  - Installs core AI libraries (LangChain, Anthropic, OpenAI, etc.)
  - Detects GPU and installs appropriate PyTorch version
  - Supports NVIDIA CUDA, AMD ROCm, and Apple Silicon
  - Interactive installation with multiple preset options
  - Creates example .env configuration

- Add GPU detection to setup_all.sh
  - Detects NVIDIA, AMD, and Apple Silicon GPUs
  - Shows CUDA version if available
  - Suggests AI frameworks installation when GPU detected

- Add checksum verification utilities
  - download_and_verify() function for secure downloads
  - Support for SHA256, SHA1, and MD5 algorithms
  - Manifest-based batch downloads with verification
  - Example implementation script and manifest file

- Upgrade Python to 3.12 in .mise.toml for better performance

--- a/.mise.toml
+++ b/.mise.toml
@@ -3,7 +3,7 @@
 
 [tools]
 node = "lts"       # Latest LTS Node.js
-python = "3.11"    # Stable Python for scripts and tests
+python = "3.12"    # Latest stable Python with performance improvements
 
 [env]
 NODE_ENV = "development"
