--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
             if ! shellcheck --severity=warning "$file"; then
               failed=1
             fi
-          done < <(find . -type f -name "*.sh" -not -path "./legacy/*" -print0)
+          done < <(find . -type f -name "*.sh" -print0)
 
           if [ "$failed" -eq 1 ]; then
             echo "❌ Shellcheck found issues"
