fix: Add build script for CI compatibility
Add no-op build script since this is a shell script project.
The CI workflow expects this script to exist for the build job.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "shellcheck scripts/*.sh tools/*.sh bin/* 2>/dev/null || true",
     "test": "bash tools/audit_setup_scripts.sh",
     "typecheck": "echo 'No TypeScript files to check (shell script project)'",
+    "build": "echo 'No build step required (shell script project)'",
     "format": "shfmt -w scripts/*.sh tools/*.sh bin/* 2>/dev/null || true"
   },
   "devDependencies": {},
