feat: Implement profile versioning with migrations
Comprehensive migration system for profile configurations:
- Version tracking with semantic versioning
- Forward migrations and rollback capabilities
- Automatic backups before each migration
- Dry-run mode for testing changes
- Migration status dashboard

Features:
- Migration runner script (profile_migrate.sh)
- Template for creating new migrations
- Three example migrations demonstrating common patterns
- Schema versioning with JSON schemas
- Justfile integration for easy access

Migration examples:
1. Initial schema setup (v1.0.0)
2. Adding teach_mode configuration (v1.1.0)
3. Splitting personas into individual files (v1.2.0)

Usage:
  just migrate-status     # Check current version
  just migrate-up         # Migrate to latest
  just migrate-down       # Rollback one version
  ./scripts/profile_migrate.sh up --dry-run  # Test migration

This ensures smooth upgrades and rollbacks when profile schemas change.

--- a/templates/justfile
+++ b/templates/justfile
@@ -389,6 +389,21 @@ palette QUERY="":
     ./bin/dp palette
   fi
 
+# Profile migration management
+migrate-status:
+  @echo "📊 Checking profile migration status..."
+  @./scripts/profile_migrate.sh status
+
+# Migrate profiles to latest version
+migrate-up VERSION="latest":
+  @echo "⬆️  Migrating profiles to {{VERSION}}..."
+  @./scripts/profile_migrate.sh up {{VERSION}}
+
+# Rollback profile migration
+migrate-down VERSION="previous":
+  @echo "⬇️  Rolling back profiles to {{VERSION}}..."
+  @./scripts/profile_migrate.sh down {{VERSION}}
+
 # Release readiness assessment
 release-ready PHASE="":
   #!/usr/bin/env bash
