feat: Add testing infrastructure and improve DPRS score to 80
- Set up pytest with coverage reporting (pytest-cov)
- Create comprehensive test suite structure
- Add Python tests for dprs, doctor, utils, and integration
- Configure pytest.ini with coverage targets (60% minimum)
- Add .env.example template for environment configuration
- Add .tool-versions for consistent tool versioning
- Enhance package.json with test and coverage scripts
- Create DPRS improvement roadmap documentation

DPRS improvements:
- Score increased from 78 to 80 (BETA phase maintained)
- Developer Experience: 80 → 85 (+5 points)
- Test infrastructure ready for coverage implementation
- Clear path to reach 90+ (SCALE phase)

Next steps: Run tests to generate coverage and reach 90+ score

--- a/config/package.json
+++ b/config/package.json
@@ -21,9 +21,15 @@
   "scripts": {
     "lint": "shellcheck scripts/*.sh tools/*.sh bin/* 2>/dev/null || true",
     "test": "bash tools/audit_setup_scripts.sh",
+    "test:coverage": "pytest --cov",
+    "test:python": "pytest",
+    "test:integration": "pytest -m integration",
+    "test:all": "npm run test && npm run test:python",
     "typecheck": "echo 'No TypeScript files to check (shell script project)'",
     "build": "echo 'No build step required (shell script project)'",
-    "format": "shfmt -w scripts/*.sh tools/*.sh bin/* 2>/dev/null || true"
+    "format": "shfmt -w scripts/*.sh tools/*.sh bin/* 2>/dev/null || true",
+    "precommit": "npm run lint && npm run format",
+    "audit": "echo 'Running security audit...' && bash scripts/dprs.sh --output artifacts"
   },
   "devDependencies": {},
   "private": true
