--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,3 +1,15 @@
 # Development dependencies for linting and testing
 yamllint>=1.32.0
 pre-commit>=3.5.0
+
+# Testing and coverage
+pytest>=7.4.0
+pytest-cov>=4.1.0
+coverage[toml]>=7.3.0
+pytest-mock>=3.11.1
+
+# Code quality
+black>=23.7.0
+flake8>=6.0.0
+mypy>=1.5.0
+isort>=5.12.0
