--- a/.github/workflows/update-registry.yml
+++ b/.github/workflows/update-registry.yml
@@ -12,6 +12,9 @@ on:
       - ".github/workflows/update-registry.yml"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-registry:
     runs-on: ubuntu-latest
@@ -19,6 +22,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate command registry
         run: |
