fix: Address review feedback and polish improvements
P0 Fixes:
- Add "Preview logs not found—skipping" notice to avoid confusion
  when preview environment isn't running during reviews

P2 Polish:
- Add CI validation for command registry documentation
  - New script: validate_command_registry.sh
  - Checks all dp commands have docs and registry entries
  - Non-blocking in CI for now (transition period)

- Add comby and yq to doctor.sh as recommended tools
  - Mark as recommended (not required) for agent tasks
  - Add installation instructions for all platforms
  - Support brew, apt, dnf, pacman package managers

- Verify AGENTIC_CODING examples already aligned with current flow
  - Uses dp agent new --goal / --id correctly
  - References artifacts/agent/<task_id>/ paths
  - No legacy .agent-work or task.md references

These changes improve developer experience by providing clear
feedback during operations and ensuring documentation stays
synchronized with implementation.

Co-Authored-By: DevPilot <noreply@devpilot.sh>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,11 @@ jobs:
           chmod +x tests/test_os_compatibility.sh
           ./tests/test_os_compatibility.sh
 
+      - name: Validate command documentation
+        run: |
+          chmod +x scripts/validate_command_registry.sh
+          ./scripts/validate_command_registry.sh || true  # Non-blocking for now
+
   quality-gates:
     runs-on: ubuntu-latest
     needs: [os-compatibility]
