feat: Implement APC-GUARD pre-commit scope guard
- Added active-task.json convention for defining current work context
- Implemented pre-commit hook that enforces scope based on contract globs
- Support for WARN mode (warnings only) and BLOCK mode (abort commit)
- Mode determined by branch prefix (vibe/*), .softsensor/mode file, or default
- Cross-platform hook installer via npm run hooks:install
- Hook reads contract's allowed/forbidden globs and validates staged files
- Skips check if no active task is configured

This enables developers to enforce scope boundaries during development.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "type": "module",
   "description": "SoftSensorAI - AI-Powered Development Platform",
   "scripts": {
-    "contracts:validate": "node scripts/contract_validate.mjs"
+    "contracts:validate": "node scripts/contract_validate.mjs",
+    "hooks:install": "node scripts/install_hooks.mjs"
   },
   "dependencies": {
     "glob": "^10.3.10",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "minimatch": "^9.0.3"
   },
   "engines": {
     "node": ">=16.0.0"
