feat: Implement CI contract enforcer workflow
- Add GitHub Actions workflow for PR contract enforcement
- Create scope and hash verification script
- Support multiple contracts with union of allowed globs
- Prioritize touchpoint tests before full suite
- Add npm script for local enforcement testing

Contract-Id: APC-ENFORCER
Contract-Hash: bd7db2f9

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "SoftSensorAI - AI-Powered Development Platform",
   "scripts": {
     "contracts:validate": "node scripts/contract_validate.mjs",
-    "hooks:install": "node scripts/install_hooks.mjs"
+    "contracts:enforce": "node scripts/contract_scope_and_hash.mjs",
+    "hooks:install": "node scripts/install_hooks.mjs",
+    "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
     "glob": "^10.3.10",
