feat: Implement vibe lane exploration workflow
- Add vibe start/snapshot/end/promote commands
- Create exploration sessions with WARN mode
- Auto-generate contracts from exploration
- Create test scaffolds for acceptance criteria
- Integrate with dp CLI and npm scripts

Contract-Id: APC-VIBE
Contract-Hash: c8d9e0f1

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "contracts:validate": "node scripts/contract_validate.mjs",
     "contracts:enforce": "node scripts/contract_scope_and_hash.mjs",
     "hooks:install": "node scripts/install_hooks.mjs",
+    "vibe:start": "node scripts/vibe_start.mjs",
+    "vibe:snapshot": "node scripts/vibe_snapshot.mjs",
+    "vibe:end": "node scripts/vibe_end.mjs",
+    "vibe:promote": "node scripts/vibe_promote.mjs",
     "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
