feat: Implement contract-bound agent wrapper
- Add agent wrapper with PLAN/PATCH/DIFF enforcement
- Validate model output format and structure
- Check file modifications against contract scope
- Integrate with npm via agent:task script
- Support multiple AI providers via shim

Contract-Id: APC-AGENT
Contract-Hash: b2c3d4e5

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vibe:snapshot": "node scripts/vibe_snapshot.mjs",
     "vibe:end": "node scripts/vibe_end.mjs",
     "vibe:promote": "node scripts/vibe_promote.mjs",
+    "agent:task": "node scripts/agent_wrapper.mjs",
     "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
