feat: Add command/documentation parity check
- Create parity check script to compare implemented vs documented
- Extract commands from bin/dp case statement
- Scan docs/commands/dp/ for documentation files
- Add CI workflow to enforce parity on PRs
- Report undocumented and unimplemented commands

Contract-Id: APC-PARITY
Contract-Hash: i7j8k9l0

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "budgets:check": "node scripts/contract_budgets_and_telemetry.mjs",
     "perf:probe": "node scripts/utils/performance_probe.mjs --save",
     "bundle:analyze": "node scripts/utils/bundle_analyzer.mjs",
+    "commands:parity": "node scripts/commands_parity.mjs",
     "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
