feat: Implement PR bot comment with contract mapping
- Add GitHub workflow for automatic PR comments on contract changes
- Create pr_contract_comment.mjs script for generating markdown summaries
- Display contract info, acceptance criteria, file scope, telemetry & budgets
- Support parsing Contract-Id from commit trailers or PR body
- Use comment anchor for updating existing comments
- Add npm script 'contracts:comment' for local testing

Contract-Id: APC-DANGER
Contract-Hash: implemented

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "perf:probe": "node scripts/utils/performance_probe.mjs --save",
     "bundle:analyze": "node scripts/utils/bundle_analyzer.mjs",
     "commands:parity": "node scripts/commands_parity.mjs",
+    "contracts:comment": "node scripts/pr_contract_comment.mjs",
     "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
     "glob": "^10.3.10",
+    "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "minimatch": "^9.0.3"
   },
